--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap');
+
 body {
     /*color*/
     --bg: #fff;
@@ -21,6 +23,8 @@ body {
     --h2Size: 1.6em;
     --h3Size: 1.32em;
     --h4Size: 1.22em;
+    --pSize: 1.16em;
+    font-family: 'Noto Serif SC', serif;
 }
 body.dark {
     /*color*/
@@ -45,4 +49,10 @@ body.dark {
     --h2Size: 1.6em;
     --h3Size: 1.32em;
     --h4Size: 1.22em;
+    font-family: 'Noto Serif SC', serif;
+}
+@media only screen and (max-width: 640px) {
+    .themeIcon{
+        display: none;
+    }
 }
