--- a/src/style/global.css
+++ b/src/style/global.css
@@ -24,12 +24,16 @@ body {
     --h3Size: 1.32em;
     --h4Size: 1.22em;
     --pSize: 1.14em;
+    --dSize: 0.76em !important;
+
     /*lineHeight*/
     --h1Size: 2em;
     --h2Size: 1.6em;
     --h3Size: 1.32em;
     --h4Size: 1.22em;
     --pHeight: 1.71em;
+    --dHeight: 1.60em !important;
+
     font-family: 'Noto Serif SC', serif;
 }
 body.dark {
